--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,6 +2,10 @@ body {
   background-color: #001422;
 }
 
+.btn-fix-width {
+  width: 200px;
+}
+
 .btn-info {
   color: #f5f5f5;
   background-color: #17a2b8;
