--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,6 +2,34 @@ body {
   background-color: #001422;
 }
 
+.section1 {
+  padding: 10px;
+}
+
+.btn-sect-1 {
+  padding: 20px;
+  margin: auto;
+  background-color: #f5f5f5;
+  color: #003355;
+  width: 100%;
+  text-align: center;
+}
+
+.btn-sect-1:hover {
+  background-color: gainsboro;
+  color: #005288;
+  cursor: -webkit-grab;
+  cursor: grab;
+}
+
+.btn-sect-1:active {
+  width: 98%;
+  background-color: #c2c2c2;
+  color: #0070bb;
+  cursor: -webkit-grabbing;
+  cursor: grabbing;
+}
+
 .btn-fix-width {
   width: 200px;
 }
