--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -50,7 +50,7 @@
   
   body {
     margin: 0;
-    font-family: var(--font-family-sans-serif);
+    font-family: var(--font-family-monospace);
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
