size resize updated

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,12 +7,12 @@ body {
 }
 
 .btn-sect-1 {
-  padding: 20px;
   margin: auto;
   background-color: #f5f5f5;
   color: #003355;
   width: 100%;
   text-align: center;
+  border-radius: 10px;
 }
 
 .btn-sect-1:hover {
