--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,58 +1,1 @@
-$primary-color: #003355;
-$cyan: #17a2b8;
-$whitesmoke: #f5f5f5;
-$white: #ffffff;
-
-body {
-    background-color: darken($primary-color, 10%);
-}
-
-.section1{
-    padding: 10px;
-}
-
-.btn-sect-1 {
-    // padding: 20px;
-    margin: auto;
-    background-color: $whitesmoke;
-    color: $primary-color;
-    width: 100%;
-    text-align: center;
-    border-radius: 10px;
-
-    &:hover {
-        background-color: darken($whitesmoke, 10%);
-        color: lighten($primary-color, 10%);
-        cursor: grab;
-    }
-    
-    &:active {
-        width: 98%;
-        background-color: darken($whitesmoke, 20%);
-        color: lighten($primary-color, 20%);
-        cursor: grabbing;
-    }
-}
-
-.btn-fix-width {
-    width: 200px;
-}
-
-.btn-info {
-    color: $whitesmoke;
-    background-color: $cyan;
-    border-color: $cyan;
-
-    &:hover {
-        color: $white;
-        background-color: darken($cyan, 10%);
-        border-color: darken($cyan, 20%);
-    }
-
-    &:focus {
-        color: $whitesmoke;
-        background-color: $cyan;
-        border-color: $cyan;
-        box-shadow: 0 0 0 0.2rem rgba(58, 176, 195, 0.5);
-    }
-  }
+$primary-color:#003355;$cyan:#17a2b8;$whitesmoke:#f5f5f5;$white:#ffffff;body{background-color:darken($primary-color,10%);}.section1{padding:10px;}.btn-sect-1{margin:auto;background-color:$whitesmoke;color:$primary-color;width:100%;text-align:center;border-radius:10px;&:hover{background-color:darken($whitesmoke,10%);color:lighten($primary-color,10%);cursor:grab}&:active{width:98%;background-color:darken($whitesmoke,20%);color:lighten($primary-color,20%);cursor:grabbing}}.btn-fix-width{width:200px;}.btn-info{color:$whitesmoke;background-color:$cyan;border-color:$cyan;&:hover{color:$white;background-color:darken($cyan,10%);border-color:darken($cyan,20%)}&:focus{color:$whitesmoke;background-color:$cyan;border-color:$cyan;box-shadow:0 0 0 .2rem rgba(58,176,195,.5)}}
