--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -545,25 +545,25 @@
     margin-left: auto;
   }
   
-  @media (min-width: var(--breakpoint-sm)) {
+  @media (min-width: 576px) {
     .container {
       max-width: 540px;
     }
   }
   
-  @media (min-width: var(--breakpoint-md)) {
+  @media (min-width: 768px) {
     .container {
       max-width: 720px;
     }
   }
   
-  @media (min-width: var(--breakpoint-lg)) {
+  @media (min-width: 992px) {
     .container {
       max-width: 960px;
     }
   }
   
-  @media (min-width: var(--breakpoint-xl)) {
+  @media (min-width: 1200px) {
     .container {
       max-width: 1140px;
     }
@@ -577,25 +577,25 @@
     margin-left: auto;
   }
   
-  @media (min-width: var(--breakpoint-sm)) {
+  @media (min-width: 576px) {
     .container, .container-sm {
       max-width: 540px;
     }
   }
   
-  @media (min-width: var(--breakpoint-md)) {
+  @media (min-width: 768px) {
     .container, .container-sm, .container-md {
       max-width: 720px;
     }
   }
   
-  @media (min-width: var(--breakpoint-lg)) {
+  @media (min-width: 992px) {
     .container, .container-sm, .container-md, .container-lg {
       max-width: 960px;
     }
   }
   
-  @media (min-width: var(--breakpoint-xl)) {
+  @media (min-width: 1200px) {
     .container, .container-sm, .container-md, .container-lg, .container-xl {
       max-width: 1140px;
     }
@@ -621,17 +621,15 @@
     padding-left: 0;
   }
   
-  .col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12, .col,
+  /* .col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12, .col,
   .col-auto, .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm,
   .col-sm-auto, .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12, .col-md,
   .col-md-auto, .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg,
   .col-lg-auto, .col-xl-1, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl,
   .col-xl-auto {
-    position: relative;
-    width: 100%;
     padding-right: 15px;
     padding-left: 15px;
-  }
+  } */
   
   .col {
     -ms-flex-preferred-size: 0;
@@ -875,7 +873,7 @@
     margin-left: 91.666667%;
   }
   
-  @media (min-width: var(--breakpoint-sm)) {
+  @media (min-width: 576px) {
     .col-sm {
       -ms-flex-preferred-size: 0;
       flex-basis: 0;
@@ -1077,7 +1075,7 @@
     }
   }
   
-  @media (min-width: var(--breakpoint-md)) {
+  @media (min-width: 768px) {
     .col-md {
       -ms-flex-preferred-size: 0;
       flex-basis: 0;
@@ -1279,7 +1277,7 @@
     }
   }
   
-  @media (min-width: var(--breakpoint-lg)) {
+  @media (min-width: 992px) {
     .col-lg {
       -ms-flex-preferred-size: 0;
       flex-basis: 0;
@@ -1481,7 +1479,7 @@
     }
   }
   
-  @media (min-width: var(--breakpoint-xl)) {
+  @media (min-width: 1200px) {
     .col-xl {
       -ms-flex-preferred-size: 0;
       flex-basis: 0;
@@ -2445,7 +2443,7 @@
     width: 100%;
   }
   
-  @media (min-width: var(--breakpoint-sm)) {
+  @media (min-width: 576px) {
     .form-inline label {
       display: -ms-flexbox;
       display: flex;
@@ -3206,7 +3204,7 @@
     left: auto;
   }
   
-  @media (min-width: var(--breakpoint-sm)) {
+  @media (min-width: 576px) {
     .dropdown-menu-sm-left {
       right: auto;
       left: 0;
@@ -3217,7 +3215,7 @@
     }
   }
   
-  @media (min-width: var(--breakpoint-md)) {
+  @media (min-width: 768px) {
     .dropdown-menu-md-left {
       right: auto;
       left: 0;
@@ -3228,7 +3226,7 @@
     }
   }
   
-  @media (min-width: var(--breakpoint-lg)) {
+  @media (min-width: 992px) {
     .dropdown-menu-lg-left {
       right: auto;
       left: 0;
@@ -3239,7 +3237,7 @@
     }
   }
   
-  @media (min-width: var(--breakpoint-xl)) {
+  @media (min-width: 1200px) {
     .dropdown-menu-xl-left {
       right: auto;
       left: 0;
@@ -4385,7 +4383,7 @@
     }
   }
   
-  @media (min-width: var(--breakpoint-sm)) {
+  @media (min-width: 576px) {
     .navbar-expand-sm {
       -ms-flex-flow: row nowrap;
       flex-flow: row nowrap;
@@ -4427,7 +4425,7 @@
     }
   }
   
-  @media (min-width: var(--breakpoint-md)) {
+  @media (min-width: 768px) {
     .navbar-expand-md {
       -ms-flex-flow: row nowrap;
       flex-flow: row nowrap;
@@ -4469,7 +4467,7 @@
     }
   }
   
-  @media (min-width: var(--breakpoint-lg)) {
+  @media (min-width: 992px) {
     .navbar-expand-lg {
       -ms-flex-flow: row nowrap;
       flex-flow: row nowrap;
@@ -4511,7 +4509,7 @@
     }
   }
   
-  @media (min-width: var(--breakpoint-xl)) {
+  @media (min-width: 1200px) {
     .navbar-expand-xl {
       -ms-flex-flow: row nowrap;
       flex-flow: row nowrap;
@@ -4812,7 +4810,7 @@
     margin-bottom: 15px;
   }
   
-  @media (min-width: var(--breakpoint-sm)) {
+  @media (min-width: 576px) {
     .card-deck {
       display: -ms-flexbox;
       display: flex;
@@ -4834,7 +4832,7 @@
     margin-bottom: 15px;
   }
   
-  @media (min-width: var(--breakpoint-sm)) {
+  @media (min-width: 576px) {
     .card-group {
       display: -ms-flexbox;
       display: flex;
@@ -4880,7 +4878,7 @@
     margin-bottom: 0.75rem;
   }
   
-  @media (min-width: var(--breakpoint-sm)) {
+  @media (min-width: 576px) {
     .card-columns {
       -webkit-column-count: 3;
       -moz-column-count: 3;
@@ -5208,7 +5206,7 @@
     border-radius: 0.3rem;
   }
   
-  @media (min-width: var(--breakpoint-sm)) {
+  @media (min-width: 576px) {
     .jumbotron {
       padding: 4rem 2rem;
     }
@@ -5534,7 +5532,7 @@
     border-left-width: 1px;
   }
   
-  @media (min-width: var(--breakpoint-sm)) {
+  @media (min-width: 576px) {
     .list-group-horizontal-sm {
       -ms-flex-direction: row;
       flex-direction: row;
@@ -5560,7 +5558,7 @@
     }
   }
   
-  @media (min-width: var(--breakpoint-md)) {
+  @media (min-width: 768px) {
     .list-group-horizontal-md {
       -ms-flex-direction: row;
       flex-direction: row;
@@ -5586,7 +5584,7 @@
     }
   }
   
-  @media (min-width: var(--breakpoint-lg)) {
+  @media (min-width: 992px) {
     .list-group-horizontal-lg {
       -ms-flex-direction: row;
       flex-direction: row;
@@ -5612,7 +5610,7 @@
     }
   }
   
-  @media (min-width: var(--breakpoint-xl)) {
+  @media (min-width: 1200px) {
     .list-group-horizontal-xl {
       -ms-flex-direction: row;
       flex-direction: row;
@@ -6052,7 +6050,7 @@
     overflow: scroll;
   }
   
-  @media (min-width: var(--breakpoint-sm)) {
+  @media (min-width: 576px) {
     .modal-dialog {
       max-width: 500px;
       margin: 1.75rem auto;
@@ -6074,14 +6072,14 @@
     }
   }
   
-  @media (min-width: var(--breakpoint-lg)) {
+  @media (min-width: 992px) {
     .modal-lg,
     .modal-xl {
       max-width: 800px;
     }
   }
   
-  @media (min-width: var(--breakpoint-xl)) {
+  @media (min-width: 1200px) {
     .modal-xl {
       max-width: 1140px;
     }
@@ -6905,7 +6903,7 @@
     display: inline-flex !important;
   }
   
-  @media (min-width: var(--breakpoint-sm)) {
+  @media (min-width: 576px) {
     .d-sm-none {
       display: none !important;
     }
@@ -6937,7 +6935,7 @@
     }
   }
   
-  @media (min-width: var(--breakpoint-md)) {
+  @media (min-width: 768px) {
     .d-md-none {
       display: none !important;
     }
@@ -6969,7 +6967,7 @@
     }
   }
   
-  @media (min-width: var(--breakpoint-lg)) {
+  @media (min-width: 992px) {
     .d-lg-none {
       display: none !important;
     }
@@ -7001,7 +6999,7 @@
     }
   }
   
-  @media (min-width: var(--breakpoint-xl)) {
+  @media (min-width: 1200px) {
     .d-xl-none {
       display: none !important;
     }
@@ -7278,7 +7276,7 @@
     align-self: stretch !important;
   }
   
-  @media (min-width: var(--breakpoint-sm)) {
+  @media (min-width: 576px) {
     .flex-sm-row {
       -ms-flex-direction: row !important;
       flex-direction: row !important;
@@ -7417,7 +7415,7 @@
     }
   }
   
-  @media (min-width: var(--breakpoint-md)) {
+  @media (min-width: 768px) {
     .flex-md-row {
       -ms-flex-direction: row !important;
       flex-direction: row !important;
@@ -7556,7 +7554,7 @@
     }
   }
   
-  @media (min-width: var(--breakpoint-lg)) {
+  @media (min-width: 992px) {
     .flex-lg-row {
       -ms-flex-direction: row !important;
       flex-direction: row !important;
@@ -7695,7 +7693,7 @@
     }
   }
   
-  @media (min-width: var(--breakpoint-xl)) {
+  @media (min-width: 1200px) {
     .flex-xl-row {
       -ms-flex-direction: row !important;
       flex-direction: row !important;
@@ -7846,7 +7844,7 @@
     float: none !important;
   }
   
-  @media (min-width: var(--breakpoint-sm)) {
+  @media (min-width: 576px) {
     .float-sm-left {
       float: left !important;
     }
@@ -7858,7 +7856,7 @@
     }
   }
   
-  @media (min-width: var(--breakpoint-md)) {
+  @media (min-width: 768px) {
     .float-md-left {
       float: left !important;
     }
@@ -7870,7 +7868,7 @@
     }
   }
   
-  @media (min-width: var(--breakpoint-lg)) {
+  @media (min-width: 992px) {
     .float-lg-left {
       float: left !important;
     }
@@ -7882,7 +7880,7 @@
     }
   }
   
-  @media (min-width: var(--breakpoint-xl)) {
+  @media (min-width: 1200px) {
     .float-xl-left {
       float: left !important;
     }
@@ -8493,7 +8491,7 @@
     margin-left: auto !important;
   }
   
-  @media (min-width: var(--breakpoint-sm)) {
+  @media (min-width: 576px) {
     .m-sm-0 {
       margin: 0 !important;
     }
@@ -8838,7 +8836,7 @@
     }
   }
   
-  @media (min-width: var(--breakpoint-md)) {
+  @media (min-width: 768px) {
     .m-md-0 {
       margin: 0 !important;
     }
@@ -9183,7 +9181,7 @@
     }
   }
   
-  @media (min-width: var(--breakpoint-lg)) {
+  @media (min-width: 992px) {
     .m-lg-0 {
       margin: 0 !important;
     }
@@ -9528,7 +9526,7 @@
     }
   }
   
-  @media (min-width: var(--breakpoint-xl)) {
+  @media (min-width: 1200px) {
     .m-xl-0 {
       margin: 0 !important;
     }
@@ -9907,7 +9905,7 @@
     text-align: center !important;
   }
   
-  @media (min-width: var(--breakpoint-sm)) {
+  @media (min-width: 576px) {
     .text-sm-left {
       text-align: left !important;
     }
@@ -9919,7 +9917,7 @@
     }
   }
   
-  @media (min-width: var(--breakpoint-md)) {
+  @media (min-width: 768px) {
     .text-md-left {
       text-align: left !important;
     }
@@ -9931,7 +9929,7 @@
     }
   }
   
-  @media (min-width: var(--breakpoint-lg)) {
+  @media (min-width: 992px) {
     .text-lg-left {
       text-align: left !important;
     }
@@ -9943,7 +9941,7 @@
     }
   }
   
-  @media (min-width: var(--breakpoint-xl)) {
+  @media (min-width: 1200px) {
     .text-xl-left {
       text-align: left !important;
     }
@@ -10146,10 +10144,10 @@
       size: a3;
     }
     body {
-      min-width: var(--breakpoint-lg) !important;
+      min-width: 992px !important;
     }
     .container {
-      min-width: var(--breakpoint-lg) !important;
+      min-width: 992px !important;
     }
     .navbar {
       display: none;
