--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -14,19 +14,15 @@ body {
   text-align: center;
   border-radius: 10px;
 }
-
 .btn-sect-1:hover {
   background-color: gainsboro;
   color: #005288;
-  cursor: -webkit-grab;
   cursor: grab;
 }
-
 .btn-sect-1:active {
   width: 98%;
   background-color: #c2c2c2;
   color: #0070bb;
-  cursor: -webkit-grabbing;
   cursor: grabbing;
 }
 
@@ -35,19 +31,16 @@ body {
   background-color: #17a2b8;
   border-color: #17a2b8;
 }
-
 .btn-info:hover {
   color: #ffffff;
   background-color: #117a8b;
   border-color: #0c525d;
 }
-
 .btn-info:focus {
   color: #f5f5f5;
   background-color: #17a2b8;
   border-color: #17a2b8;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(58, 176, 195, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(58, 176, 195, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(58, 176, 195, 0.5);
 }
 
 .btn {
@@ -58,4 +51,30 @@ body {
   border: inset;
   border: 2px solid #117a8b !important;
 }
-/*# sourceMappingURL=main.css.map */
+
+/* Footer Pop Up */
+#bottomPopup {
+  display: none;
+  position: fixed;
+  bottom: 54px;
+  left: 0;
+  width: 100%;
+  background-color: #f5f5f5;
+  padding: 15px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+#closeButton {
+  cursor: pointer;
+  color: #333;
+  font-weight: bold;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+#closeIcon {
+  font-size: 20px;
+  margin-left: 5px;
+  color: red;
+}/*# sourceMappingURL=main.css.map */
