--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -7,7 +7,7 @@ body {
     background-color: darken($primary-color, 10%);
 }
 
-.section1{
+.section1 {
     padding: 10px;
 }
 
@@ -25,7 +25,7 @@ body {
         color: lighten($primary-color, 10%);
         cursor: grab;
     }
-    
+
     &:active {
         width: 98%;
         background-color: darken($whitesmoke, 20%);
@@ -51,13 +51,40 @@ body {
         border-color: $cyan;
         box-shadow: 0 0 0 0.2rem rgba(58, 176, 195, 0.5);
     }
-  }
+}
 
-  .btn {
+.btn {
     border: 2px solid transparent;
-  }
+}
 
-  .sec10:hover {
+.sec10:hover {
     border: inset;
     border: 2px solid darken($cyan, 10%) !important;
-  }
+}
+
+/* Footer Pop Up */
+#bottomPopup {
+    display: none;
+    position: fixed;
+    bottom: 54px;
+    left: 0;
+    width: 100%;
+    background-color: $whitesmoke;
+    padding: 15px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+#closeButton {
+    cursor: pointer;
+    color: #333;
+    font-weight: bold;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+
+#closeIcon {
+    font-size: 20px;
+    margin-left: 5px;
+    color: red;
+}
