lorem ipsum layout and trigger updated

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -57,6 +57,10 @@ body {
     border: 2px solid transparent;
 }
 
+.btn-lg, .btn-group-lg > .btn {
+    padding: .5rem;
+}
+
 .sec10:hover {
     border: inset;
     border: 2px solid darken($cyan, 10%) !important;
