--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -47,6 +47,10 @@ body {
   border: 2px solid transparent;
 }
 
+.btn-lg, .btn-group-lg > .btn {
+  padding: 0.5rem;
+}
+
 .sec10:hover {
   border: inset;
   border: 2px solid #117a8b !important;
